Fix: Error Message not showing.

--- a/src/index.css
+++ b/src/index.css
@@ -142,7 +142,7 @@ main {
 
 .contact-section {
   text-align: start;
-  margin-top: 90px;
+  margin-top: 30px;
 }
 
 .contact-heading h1 {
@@ -177,6 +177,7 @@ form label{
   font-size: 14px;
   font-weight: 500;
   padding-bottom: 6px;
+  color: #667085;
 }
 
 .input::placeholder {
@@ -188,19 +189,70 @@ input {
   border: 1px solid #D0D5DD;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
+  width: 100%;
 }
 
 .radio {
   display: flex;
   align-items: center;
-}
-
-.input[type='radio'] {
-  background-color: red;
+  margin-bottom: 32px;
 }
 
 .radio label {
   padding-left: 10px;
+}
+
+input:invalid ~ span {
+  display: block;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.field span {
+  display: none;
+  color: red;
+  font-size: 12px;
+  padding-top: 3px;
+  font-weight: 200;
+}
+
+input:focus, textarea:focus {
+  outline: none;
+  border: 1px solid lightblue;
+}
+
+textarea {
+  width: 720px;
+  height: 132px;
+  resize: none;
+  background: #FFFFFF;
+  border: 1px solid #D0D5DD;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+}
+
+textarea::placeholder {
+  padding-left: 14px;
+  padding-top: 12px;
+  font-family: inter;
+  font-weight: 400;
+}
+
+.message {
+  margin-top: 14px;
+  margin-bottom: 24px;
+}
+
+.form-btn {
+  padding-top: 12px; 
+  padding-bottom: 12px;
+  border: 1px solid #1570EF;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+  background: #1570EF;
+  color: #FFFFFF;
 }
 
 
